; ModuleID = '/home/carl/AnghaBench/git/extr_promisor-remote.c_promisor_remote_init.c'
source_filename = "/home/carl/AnghaBench/git/extr_promisor-remote.c_promisor_remote_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.promisor_remote = type { i32 }

@initialized = common dso_local global i32 0, align 4
@promisor_remote_config = common dso_local global i32 0, align 4
@repository_format_partial_clone = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @promisor_remote_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @promisor_remote_init() #0 {
  %1 = alloca %struct.promisor_remote*, align 8
  %2 = alloca %struct.promisor_remote*, align 8
  %3 = load i32, i32* @initialized, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  br label %24

6:                                                ; preds = %0
  store i32 1, i32* @initialized, align 4
  %7 = load i32, i32* @promisor_remote_config, align 4
  %8 = call i32 @git_config(i32 %7, i32* null)
  %9 = load i64, i64* @repository_format_partial_clone, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %6
  %12 = load i64, i64* @repository_format_partial_clone, align 8
  %13 = call %struct.promisor_remote* @promisor_remote_lookup(i64 %12, %struct.promisor_remote** %2)
  store %struct.promisor_remote* %13, %struct.promisor_remote** %1, align 8
  %14 = load %struct.promisor_remote*, %struct.promisor_remote** %1, align 8
  %15 = icmp ne %struct.promisor_remote* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load %struct.promisor_remote*, %struct.promisor_remote** %1, align 8
  %18 = load %struct.promisor_remote*, %struct.promisor_remote** %2, align 8
  %19 = call i32 @promisor_remote_move_to_tail(%struct.promisor_remote* %17, %struct.promisor_remote* %18)
  br label %23

20:                                               ; preds = %11
  %21 = load i64, i64* @repository_format_partial_clone, align 8
  %22 = call i32 @promisor_remote_new(i64 %21)
  br label %23

23:                                               ; preds = %20, %16
  br label %24

24:                                               ; preds = %5, %23, %6
  ret void
}

declare dso_local i32 @git_config(i32, i32*) #1

declare dso_local %struct.promisor_remote* @promisor_remote_lookup(i64, %struct.promisor_remote**) #1

declare dso_local i32 @promisor_remote_move_to_tail(%struct.promisor_remote*, %struct.promisor_remote*) #1

declare dso_local i32 @promisor_remote_new(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
